<resources>
    <string name="app_name">PremFina Self-service</string>
    <string name="login">Login</string>
    <string name="back_to_login">Already registered? Login</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="error_loading_broker">Could not get details, please check your internet connection</string>
    <string name="introduce_login">Introduce Your Login Details</string>
    <string name="reg_success">Check your email to create your password</string>
    <string name="register">Sign up</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="by_sms">By SMS</string>
    <string name="by_email">By Email</string>
    <string name="token">Token</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_registered_question">Not registered?</string>
    <string name="something_went_wrong">Something went wrong, please try again later or contact client services</string>
    <string name="wrong_credentials">Email or Password are invalid, please retry.</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="surname">Surname</string>
    <string name="postcode">Post Code</string>
    <string name="agreement_number">Agreement Number</string>
    <string name="dob_day" translatable="false">dd</string>
    <string name="dob_month" translatable="false">mm</string>
    <string name="dob_year" translatable="false">yyyy</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="home">Home</string>
    <string name="email_support">Email Support</string>
    <string name="call_support">Call Support</string>
    <string name="title_activity_contact">Contact</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="mandatory_field">This field is mandatory</string>
    <string name="invalid_postode">Please insert a valid UK postcode</string>
    <string name="selfservice_portal_url" translatable="false">https://esig-dev-assura.premfina.com</string>
    <string name="contact_question_desc1">If you have any queries relating to your Agreement(s), or anything else we can help you with then please follow the instructions below.</string>
    <string name="contact_question_desc2">Alternatively, you can call our customer service from the navigation menu. Calls will be charged at your standard supplier rate.</string>
    <string name="contact_question_main">Is your query related to one or more agreements?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auto">Auto</string>
    <string name="agreement_numbers">Agreement Numbers</string>
    <string name="subject">Subject</string>
    <string name="query">Query</string>
    <string name="select_agreements">Select Agreements</string>
    <string name="dashboard">Dashboard</string>
    <string name="agreements">Agreements</string>
    <string name="view">View</string>
    <string name="download">Download</string>
    <string name="cleared">Balance Cleared</string>
    <string name="agreement_details">Agreement Details</string>
    <string name="add_agreement_desc">Use this section to add new agreements.\n\nJust type in your new agreement and we will add it to your list of agreements.\n\nYou may have to eSign it if it\'s not a renewal agreement.</string>
    <string name="add">Add</string>
    <string name="app_title">Premfina Self-service Portal</string>
    <string name="emailed_successful">Emailed Successfully</string>
    <string name="emailed_failure">Error Emailing</string>

    <string name="broker_name">Broker</string>
    <string name="total_amount">Total credit</string>
    <string name="monthly_amount">Monthly payment</string>
    <string name="status">Status</string>
    <string name="next_due_date">Next date</string>
    <string name="policy_number">Policy Number</string>
    <string name="number_of_payments">Payments</string>
    <string name="maturity_date">Maturity</string>
    <string name="live_date">Live</string>
    <string name="apr">APR</string>

    <string name="email_reset_password">Email reset password</string>

    <string name="background_description">Background image, featuring a picture of the sea with an island on one side, during the sunset</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <string name="use_external_browser_main">Use external browser</string>
    <string name="use_external_browser_desc">Open links on an external browser</string>
    <string name="night_mode">Use night mode</string>

    <string name="fca_notice1">PremFina Limited is authorised and regulated by the Financial Conduct Authority (FCA).</string>
    <string name="fca_notice2">It is legally advised by Clifford Chance LLP on commercial matters, Eversheds LLP on regulatory affairs and Kennedys LLP on insurance industry specifics; and audited by UHY Hacker Young LLP. </string>
    <string name="more_about"><a href="http://premfina.com\">Premfina</a></string>
    <string name="invalid_agreementNumber">Insert a valid agreement number</string>
    <string name="agreements_amount">Total agreements</string>
    <string name="to_pay">To pay</string>
    <string name="paid">Paid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_agreements">Your agreements</string>
    <string name="my_documents">My Documents</string>

    <string name="docs_emailed">Your documents have been sent to your registered email address</string>
    <string name="fp_email_sent">Check your email to reset your password</string>

    <string name="status_400">There was a problem with your request, please try again or contact support</string>
    <string name="status_404">The request could not be made</string>
    <string name="status_500">There was an internal error, try again later or contact support</string>

    <string name="app_background">App Background</string>
    <string name="orange_apple">Orange apple</string>
    <string name="coffee_mug">Coffee mug</string>
    <string name="cream">Cream</string>

    <string name="conf_reg_bad_request">The account couldn\'t be validated</string>

    <string name="title_select_app">Select an app</string>

    <string name="file_downloaded_notif">Document Downloaded</string>
    <string name="file_downloaded_text">Tap here to view your document</string>

    <string name="no_appropriate_app">Couldn\'t find an appropriate app to open your file</string>

    <string name="mfa_texted">You MFA token has been sent to you by text</string>
    <string name="mfa_emailed">You MFA token has been sent to you by email</string>

    <string name="pw_not_match">Passwords do not match</string>
    <string name="pw_short">Lengthen your password to at least 8 characters</string>
    <string name="pw_format">Please use at least one uppercase, one lowercase and a number</string>
</resources>
