<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmRegistrationActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header_logos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/create_password_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <android.support.v7.widget.CardView
            android:id="@+id/confirm_password_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:contentPaddingBottom="0dp"
            app:contentPaddingTop="0dp"
            app:layout_constraintEnd_toEndOf="@+id/create_password_card"
            app:layout_constraintStart_toStartOf="@+id/create_password_card"
            app:layout_constraintTop_toBottomOf="@+id/create_password_card">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText

                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="AUTOFILL_HINT_PASSWORD"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/create_password_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:contentPaddingBottom="0dp"
            app:contentPaddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText

                    android:id="@+id/create_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="AUTOFILL_HINT_PASSWORD"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/next_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="validateAndNext"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/confirm_password_card"
            app:layout_constraintStart_toStartOf="@+id/confirm_password_card"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_card" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mfa_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <android.support.v7.widget.CardView
            android:id="@+id/email_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:contentPaddingBottom="0dp"
            app:contentPaddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText

                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                    android:hint="@string/token"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/confirm_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="submitRegistrationConfirm"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="@+id/email_card"
            app:layout_constraintStart_toStartOf="@+id/email_card"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="textToken"
            android:text="@string/by_sms"
            app:layout_constraintStart_toStartOf="@+id/email_card"
            app:layout_constraintTop_toBottomOf="@+id/email_card" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="emailToken"
            android:text="@string/by_email"
            app:layout_constraintEnd_toEndOf="@+id/email_card"
            app:layout_constraintTop_toBottomOf="@+id/email_card" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>